--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link type="text/css" rel="stylesheet" href="style.css" />
+    <script src="maze.js"></script>
+    <script src="coin.js"></script>
+    <script src="player.js"></script>
+    <script src="game.js"></script>
     <title>Maze</title>
 </head>
 <body>
