center canvas, random start pos

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>Maze</title>
 </head>
 <body>
+        <div id="sketch"></div>
     
     <script src="p5.js"></script>
     <script src="app.js"></script>
