--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
     <link type="text/css" rel="stylesheet" href="style.css" />
     <script src="maze.js"></script>
     <script src="coin.js"></script>
@@ -12,9 +14,23 @@
     <title>Maze</title>
 </head>
 <body>
+   
         <div id="sketch"></div>
-    
+
+        <div class="newgame" id="newgame">
+                <h6 id="gamelogo">LIGHT MAZE</h6>
+                <input type="submit" class="launcher" id="launcher" value="New Game" onclick="LaunchGame();">
+            </div>
+                
+            <div class="light"></div>
     <script src="p5.js"></script>
     <script src="app.js"></script>
+    <script type="text/javascript">
+        $(document).mousemove(function(e){
+            var X = e.pageX;
+            var Y = e.pageY;
+            $('.light').css('background','radial-gradient(circle at '+X+'px '+Y+'px, transparent, #000 50% )');
+        })
+    </script>
 </body>
 </html>
