--- a/index.html
+++ b/index.html
@@ -14,15 +14,18 @@
     <title>Maze</title>
 </head>
 <body>
-   
         <div id="sketch"></div>
-
         <div class="newgame" id="newgame">
                 <h6 id="gamelogo">LIGHT MAZE</h6>
+                <div id="score"></div>
                 <input type="submit" class="launcher" id="launcher" value="New Game" onclick="LaunchGame();">
+                <input type="submit" class="launcher" id="fakelauncher" value="New Game">
             </div>
-                
             <div class="light"></div>
+        <div id="show_score"></div>
+
+
+
     <script src="p5.js"></script>
     <script src="app.js"></script>
     <script type="text/javascript">
