--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 <body>
         <div id="sketch"></div>
+        <img id="bgimg" src="img/starnosedmole.png">
         <div class="newgame" id="newgame">
                 <h6 id="gamelogo">LIGHT MAZE</h6>
                 <div id="score"></div>
