adding ground img

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
     <link type="text/css" rel="stylesheet" href="style.css" />
     <script src="maze.js"></script>
@@ -14,6 +13,7 @@
     <title>Maze</title>
 </head>
 <body>
+    <div id="body"></div>
         <div id="sketch"></div>
         <img id="bgimg" src="img/starnosedmole.png">
         <div class="newgame" id="newgame">
@@ -24,7 +24,7 @@
             </div>
             <div class="light"></div>
         <div id="show_score"></div>
-
+    
 
 
     <script src="p5.js"></script>
