add key control

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <div id="score"></div>
                 <input type="submit" class="launcher" id="launcher" value="New Game" onclick="LaunchGame();">
                 <input type="submit" class="launcher" id="fakelauncher" value="New Game">
+                <p>use ⮜ ⮞ ⮝ ⮟ or ZQSD keys to play</p>
             </div>
             <div class="light"></div>
         <div id="show_score"></div>
