--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
-    <script defer src=https://cdn.JsDelivr.net/npm/p5/lib/addons/p5.sound.min.js></script>
     <link type="text/css" rel="stylesheet" href="style.css" />
     <script src="maze.js"></script>
     <script src="coin.js"></script>
@@ -30,6 +29,7 @@
 
 
     <script src="p5.js"></script>
+    <script src=https://cdn.JsDelivr.net/npm/p5/lib/addons/p5.sound.min.js></script>
     <script src="app.js"></script>
     <script type="text/javascript">
         $(document).mousemove(function(e){
